@@ -315,6 +315,9 @@ Release 2.6.4 - UNRELEASED
 
   BUG FIXES
 
+    MAPREDUCE-6577. MR AM unable to load native library without
+    MR_AM_ADMIN_USER_ENV set (sjlee)
+
 Release 2.6.3 - 2015-12-17
 
   INCOMPATIBLE CHANGES
